[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Levels/LevelTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Levels/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Levels/IntroInstructions.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Items/Key.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Actors/Monster.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Levels/Level1.gd" type="Script" id=6]
[ext_resource path="res://src/Levels/Doors.gd" type="Script" id=8]

[node name="Level1" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="2LayerTileMap" parent="." index="0"]
position = Vector2( -1.25992, 0 )

[node name="FirstLayer" parent="2LayerTileMap" index="0"]
tile_data = PoolIntArray( 0, 17, 0, 1, 17, 0, 2, 18, 0, 3, 18, 0, 4, 18, 0, 5, 18, 0, 6, 18, 0, 7, 18, 0, 8, 18, 0, 9, 18, 0, 10, 18, 0, 11, 18, 0, 12, 18, 0, 13, 18, 0, 14, 18, 0, 15, 18, 0, 16, 18, 0, 17, 18, 0, 18, 18, 0, 19, 18, 0, 20, 18, 0, 21, 18, 0, 22, 18, 0, 23, 18, 0, 24, 18, 0, 26, 24, 0, 27, 18, 0, 28, 18, 0, 29, 18, 0, 30, 18, 0, 31, 18, 0, 32, 18, 0, 33, 18, 0, 34, 18, 0, 35, 18, 0, 36, 18, 0, 37, 18, 0, 38, 18, 0, 39, 18, 0, 40, 18, 0, 41, 18, 0, 42, 18, 0, 43, 18, 0, 55, 24, 0, 56, 24, 0, 57, 24, 0, 58, 24, 0, 59, 24, 0, 60, 24, 0, 63, 24, 0, 64, 24, 0, 65, 24, 0, 66, 24, 0, 67, 24, 0, 68, 24, 0, 69, 18, 0, 65536, 1610612736, 0, 65537, 1610612736, 0, 65538, 1610612736, 0, 65539, 1610612736, 0, 65540, 1610612736, 0, 65541, 1610612736, 0, 65542, 1610612736, 0, 65543, 1610612736, 0, 65544, 1610612736, 0, 65545, 1610612736, 0, 65546, 1610612736, 0, 65547, 1610612736, 0, 65548, 1610612736, 0, 65549, 1610612736, 0, 65550, 1610612736, 0, 65551, 1610612736, 0, 65552, 1610612736, 0, 65553, 1610612736, 0, 65554, 1610612736, 0, 65555, 1610612736, 0, 65556, 1610612736, 0, 65557, 1610612736, 0, 65558, 1610612736, 0, 65559, 1610612736, 0, 65560, 1610612736, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 65575, 0, 0, 65576, 0, 0, 65577, 0, 0, 65578, 0, 0, 65579, 0, 0, 65591, 0, 0, 65592, 0, 0, 65593, 0, 0, 65594, 0, 0, 65595, 0, 0, 65596, 0, 0, 65597, 0, 0, 65598, 0, 0, 65599, 0, 0, 65600, 0, 0, 65601, 0, 0, 65602, 0, 0, 65603, 0, 0, 65604, 0, 0, 65605, 0, 0, 131072, 1610612736, 0, 131073, 1610612736, 0, 131074, 1610612736, 0, 131075, 1610612736, 0, 131076, 1610612736, 0, 131077, 1610612736, 0, 131078, 1610612736, 0, 131079, 1610612736, 0, 131080, 1610612736, 0, 131081, 1610612736, 0, 131082, 1610612736, 0, 131083, 1610612736, 0, 131084, 1610612736, 0, 131085, 1610612736, 0, 131086, 1610612736, 0, 131087, 1610612736, 0, 131088, 1610612736, 0, 131089, 1610612736, 0, 131090, 1610612736, 0, 131091, 1610612736, 0, 131092, 1610612736, 0, 131093, 1610612736, 0, 131094, 1610612736, 0, 131095, 1610612736, 0, 131096, 1610612736, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 0, 0, 131108, 0, 0, 131109, 0, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 131113, 0, 0, 131114, 0, 0, 131115, 0, 0, 131127, 0, 0, 131128, 0, 0, 131129, 0, 0, 131130, 0, 0, 131131, 0, 0, 131132, 0, 0, 131133, 0, 0, 131134, 0, 0, 131135, 0, 0, 131136, 0, 0, 131137, 0, 0, 131138, 0, 0, 131139, 0, 0, 131140, 0, 0, 131141, 0, 0, 196608, 1610612736, 0, 196609, 1610612736, 0, 196610, 1610612736, 0, 196611, 1610612736, 0, 196612, 1610612736, 0, 196613, 1610612736, 0, 196614, 1610612736, 0, 196615, 1610612736, 0, 196616, 1610612736, 0, 196617, 1610612736, 0, 196618, 1610612736, 0, 196619, 1610612736, 0, 196620, 1610612736, 0, 196621, 1610612736, 0, 196622, 1610612736, 0, 196623, 1610612736, 0, 196624, 1610612736, 0, 196625, 1610612736, 0, 196626, 1610612736, 0, 196627, 1610612736, 0, 196628, 1610612736, 0, 196629, 1610612736, 0, 196630, 1610612736, 0, 196631, 1610612736, 0, 196632, 1610612736, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196663, 0, 0, 196664, 0, 0, 196665, 0, 0, 196666, 0, 0, 196667, 0, 0, 196668, 0, 0, 196669, 0, 0, 196670, 0, 0, 196671, 0, 0, 196672, 0, 0, 196673, 0, 0, 196674, 0, 0, 196675, 0, 0, 196676, 0, 0, 196677, 0, 0, 262144, 1610612736, 0, 262145, 1610612736, 0, 262146, 1610612736, 0, 262147, 1610612736, 0, 262148, 1610612736, 0, 262149, 1610612736, 0, 262150, 1610612736, 0, 262151, 1610612736, 0, 262152, 1610612736, 0, 262153, 1610612736, 0, 262154, 1610612736, 0, 262155, 1610612736, 0, 262156, 1610612736, 0, 262157, 1610612736, 0, 262158, 1610612736, 0, 262159, 1610612736, 0, 262160, 1610612736, 0, 262161, 1610612736, 0, 262162, 1610612736, 0, 262163, 1610612736, 0, 262164, 1610612736, 0, 262165, 1610612736, 0, 262166, 1610612736, 0, 262167, 1610612736, 0, 262168, 1610612736, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 0, 0, 262183, 0, 0, 262184, 0, 0, 262185, 0, 0, 262186, 0, 0, 262187, 0, 0, 262199, 0, 0, 262200, 0, 0, 262201, 0, 0, 262202, 0, 0, 262203, 0, 0, 262204, 0, 0, 262205, 0, 0, 262206, 0, 0, 262207, 0, 0, 262208, 0, 0, 262209, 0, 0, 262210, 0, 0, 262211, 0, 0, 262212, 0, 0, 262213, 0, 0, 327680, 1610612736, 0, 327681, 1610612736, 0, 327682, 1610612736, 0, 327683, 1610612736, 0, 327684, 1610612736, 0, 327685, 1610612736, 0, 327686, 1610612736, 0, 327687, 1610612736, 0, 327688, 1610612736, 0, 327689, 1610612736, 0, 327690, 1610612736, 0, 327691, 1610612736, 0, 327692, 1610612736, 0, 327693, 1610612736, 0, 327694, 1610612736, 0, 327695, 1610612736, 0, 327696, 1610612736, 0, 327697, 1610612736, 0, 327698, 1610612736, 0, 327699, 1610612736, 0, 327700, 1610612736, 0, 327701, 1610612736, 0, 327702, 1610612736, 0, 327703, 1610612736, 0, 327704, 1610612736, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 0, 0, 327718, 0, 0, 327719, 0, 0, 327720, 0, 0, 327721, 0, 0, 327722, 0, 0, 327723, 0, 0, 327735, 0, 0, 327736, 0, 0, 327737, 0, 0, 327738, 0, 0, 327739, 0, 0, 327740, 0, 0, 327741, 0, 0, 327742, 0, 0, 327743, 0, 0, 327744, 0, 0, 327745, 0, 0, 327746, 0, 0, 327747, 0, 0, 327748, 0, 0, 327749, 0, 0, 393216, 1610612736, 0, 393217, 1610612736, 0, 393218, 1610612736, 0, 393219, 1610612736, 0, 393220, 1610612736, 0, 393221, 1610612736, 0, 393222, 1610612736, 0, 393223, 1610612736, 0, 393224, 1610612736, 0, 393225, 1610612736, 0, 393226, 1610612736, 0, 393227, 1610612736, 0, 393228, 1610612736, 0, 393229, 1610612736, 0, 393230, 1610612736, 0, 393231, 1610612736, 0, 393232, 1610612736, 0, 393233, 1610612736, 0, 393234, 1610612736, 0, 393235, 1610612736, 0, 393236, 1610612736, 0, 393237, 1610612736, 0, 393238, 1610612736, 0, 393239, 1610612736, 0, 393240, 1610612736, 0, 393242, 1610612755, 0, 393243, 1610612754, 0, 393244, 1610612754, 0, 393245, 1610612754, 0, 393246, 1610612754, 0, 393247, 1610612754, 0, 393248, 1610612755, 0, 393249, 0, 0, 393250, 0, 0, 393251, 24, 0, 393271, 0, 0, 393272, 0, 0, 393273, 0, 0, 393274, 0, 0, 393275, 0, 0, 393276, 0, 0, 393277, 0, 0, 393278, 0, 0, 393279, 0, 0, 393280, 0, 0, 393281, 0, 0, 393282, 0, 0, 393283, 0, 0, 393284, 0, 0, 393285, 0, 0, 458752, 1610612736, 0, 458753, 1610612736, 0, 458754, 1610612736, 0, 458755, 1610612736, 0, 458756, 1610612736, 0, 458757, 1610612736, 0, 458758, 1610612736, 0, 458759, 1610612736, 0, 458760, 1610612736, 0, 458761, 1610612736, 0, 458762, 1610612736, 0, 458763, 1610612736, 0, 458764, 1610612736, 0, 458765, 1610612736, 0, 458766, 1610612736, 0, 458767, 1610612736, 0, 458768, 1610612736, 0, 458769, 1610612736, 0, 458770, 1610612736, 0, 458771, 1610612736, 0, 458772, 1610612736, 0, 458773, 1610612736, 0, 458774, 1610612736, 0, 458775, 1610612736, 0, 458776, 1610612736, 0, 458785, 0, 0, 458786, 0, 0, 458807, 0, 0, 458808, 0, 0, 458809, 0, 0, 458810, 0, 0, 458811, 0, 0, 458812, 0, 0, 458813, 0, 0, 458814, 0, 0, 458815, 0, 0, 458816, 0, 0, 458817, 0, 0, 458818, 0, 0, 458819, 0, 0, 458820, 0, 0, 458821, 0, 0, 524288, 1610612736, 0, 524289, 1610612736, 0, 524290, 1610612736, 0, 524291, 1610612736, 0, 524292, 1610612736, 0, 524293, 1610612736, 0, 524294, 1610612736, 0, 524295, 1610612736, 0, 524296, 1610612736, 0, 524297, 1610612736, 0, 524298, 1610612736, 0, 524299, 1610612736, 0, 524300, 1610612736, 0, 524301, 1610612736, 0, 524302, 1610612736, 0, 524303, 1610612736, 0, 524304, 1610612736, 0, 524305, 1610612736, 0, 524306, 1610612736, 0, 524307, 1610612736, 0, 524308, 1610612736, 0, 524309, 1610612736, 0, 524310, 1610612736, 0, 524311, 1610612736, 0, 524312, 1610612736, 0, 524314, 1610612754, 0, 524315, 1610612754, 0, 524316, 1610612754, 0, 524317, 1610612754, 0, 524318, 1610612754, 0, 524319, 1610612754, 0, 524320, 24, 0, 524321, 0, 0, 524322, 0, 0, 524323, 23, 0, 524324, 18, 0, 524325, 18, 0, 524326, 18, 0, 524327, 18, 0, 524328, 18, 0, 524329, 18, 0, 524330, 18, 0, 524331, 18, 0, 524332, 18, 0, 524333, 18, 0, 524334, 18, 0, 524335, 18, 0, 524336, 18, 0, 524337, 18, 0, 524338, 18, 0, 524339, 18, 0, 524340, 18, 0, 524341, 18, 0, 524342, 18, 0, 524343, 0, 0, 524344, 0, 0, 524345, 0, 0, 524346, 0, 0, 524347, 0, 0, 524348, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 524352, 0, 0, 524353, 0, 0, 524354, 0, 0, 524355, 0, 0, 524356, 0, 0, 524357, 0, 0, 589824, 1610612736, 0, 589825, 1610612736, 0, 589826, 1610612736, 0, 589827, 1610612736, 0, 589828, 1610612736, 0, 589829, 1610612736, 0, 589830, 1610612736, 0, 589831, 1610612736, 0, 589832, 1610612736, 0, 589833, 1610612736, 0, 589834, 1610612736, 0, 589835, 1610612736, 0, 589836, 1610612736, 0, 589837, 1610612736, 0, 589838, 1610612736, 0, 589839, 1610612736, 0, 589840, 1610612736, 0, 589841, 1610612736, 0, 589842, 1610612736, 0, 589843, 1610612736, 0, 589844, 1610612736, 0, 589845, 1610612736, 0, 589846, 1610612736, 0, 589847, 1610612736, 0, 589848, 1610612736, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0, 589884, 0, 0, 589885, 0, 0, 589886, 0, 0, 589887, 0, 0, 589888, 0, 0, 589889, 0, 0, 589890, 0, 0, 589891, 0, 0, 589892, 0, 0, 589893, 0, 0, 655360, 1610612736, 0, 655361, 1610612736, 0, 655362, 1610612736, 0, 655363, 1610612736, 0, 655364, 1610612736, 0, 655365, 1610612736, 0, 655366, 1610612736, 0, 655367, 1610612736, 0, 655368, 1610612736, 0, 655369, 1610612736, 0, 655370, 1610612736, 0, 655371, 1610612736, 0, 655372, 1610612736, 0, 655373, 1610612736, 0, 655374, 1610612736, 0, 655375, 1610612736, 0, 655376, 1610612736, 0, 655377, 1610612736, 0, 655378, 1610612736, 0, 655379, 1610612736, 0, 655380, 1610612736, 0, 655381, 1610612736, 0, 655382, 1610612736, 0, 655383, 1610612736, 0, 655384, 1610612736, 0, 655385, 1610612753, 0, 655386, 1610612753, 0, 655387, 1610612754, 0, 655388, 1610612754, 0, 655389, 1610612754, 0, 655390, 1610612754, 0, 655391, 1610612754, 0, 655392, 1610612754, 0, 655393, 1610612754, 0, 655394, 1610612754, 0, 655395, 1610612754, 0, 655396, 1610612754, 0, 655397, 1610612754, 0, 655398, 1610612754, 0, 655399, 1610612754, 0, 655400, 1610612754, 0, 655401, 1610612754, 0, 655402, 1610612754, 0, 655403, 1610612754, 0, 655404, 1610612754, 0, 655405, 1610612754, 0, 655406, 1610612754, 0, 655407, 1610612754, 0, 655408, 1610612754, 0, 655409, 1610612754, 0, 655410, 1610612754, 0, 655411, 1610612754, 0, 655412, 1610612754, 0, 655413, 1610612754, 0, 655414, 1610612753, 0, 655415, 0, 0, 655416, 0, 0, 655417, 0, 0, 655418, 0, 0, 655419, 0, 0, 655420, 0, 0, 655421, 0, 0, 655422, 0, 0, 655423, 0, 0, 655424, 0, 0, 655425, 0, 0, 655426, 0, 0, 655427, 0, 0, 655428, 0, 0, 655429, 0, 0, 720896, 1610612736, 0, 720897, 1610612736, 0, 720898, 1610612736, 0, 720899, 1610612736, 0, 720900, 1610612736, 0, 720901, 1610612736, 0, 720902, 1610612736, 0, 720903, 1610612736, 0, 720904, 1610612736, 0, 720905, 1610612736, 0, 720906, 1610612736, 0, 720907, 1610612736, 0, 720908, 1610612736, 0, 720909, 1610612736, 0, 720910, 1610612736, 0, 720911, 1610612736, 0, 720912, 1610612736, 0, 720913, 1610612736, 0, 720914, 1610612736, 0, 720915, 1610612736, 0, 720916, 1610612736, 0, 720917, 1610612736, 0, 720918, 1610612736, 0, 720919, 1610612736, 0, 720920, 1610612736, 0, 720951, 0, 0, 720952, 0, 0, 720953, 0, 0, 720954, 0, 0, 720955, 0, 0, 720956, 0, 0, 720957, 0, 0, 720958, 0, 0, 720959, 0, 0, 720960, 0, 0, 720961, 0, 0, 720962, 0, 0, 720963, 0, 0, 720964, 0, 0, 720965, 0, 0, 786432, 1610612736, 0, 786433, 1610612736, 0, 786434, 1610612736, 0, 786435, 1610612736, 0, 786436, 1610612736, 0, 786437, 1610612736, 0, 786438, 1610612736, 0, 786439, 1610612736, 0, 786440, 1610612736, 0, 786441, 1610612736, 0, 786442, 1610612736, 0, 786443, 1610612736, 0, 786444, 1610612736, 0, 786445, 1610612736, 0, 786446, 1610612736, 0, 786447, 1610612736, 0, 786448, 1610612736, 0, 786449, 1610612736, 0, 786450, 1610612736, 0, 786451, 1610612736, 0, 786452, 1610612736, 0, 786453, 1610612736, 0, 786454, 1610612736, 0, 786455, 1610612736, 0, 786456, 1610612736, 0, 851968, 1610612753, 0, 851969, 1610612754, 0, 851970, 1610612754, 0, 851971, 1610612754, 0, 851972, 1610612754, 0, 851973, 1610612754, 0, 851974, 1610612754, 0, 851975, 1610612754, 0, 851976, 1610612754, 0, 851977, 1610612755, 0, 851978, 1610612736, 0, 851979, 1610612736, 0, 851980, 1610612736, 0, 851981, 1610612736, 0, 851982, 1610612736, 0, 851983, 1610612736, 0, 851984, 1610612736, 0, 851985, 1610612736, 0, 851986, 1610612736, 0, 851987, 1610612736, 0, 851988, 1610612736, 0, 851989, 1610612736, 0, 851990, 1610612736, 0, 851991, 1610612736, 0, 851992, 1610612736, 0, 917504, 1610612736, 0, 917505, 1610612736, 0, 917506, 1610612736, 0, 917507, 1610612736, 0, 917508, 1610612736, 0, 917509, 1610612736, 0, 917510, 1610612736, 0, 917511, 1610612736, 0, 917512, 1610612736, 0, 917513, 1610612736, 0, 917514, 1610612736, 0, 917515, 1610612736, 0, 917516, 1610612736, 0, 917517, 1610612736, 0, 917518, 1610612736, 0, 917519, 1610612736, 0, 917520, 1610612736, 0, 917521, 1610612736, 0, 917522, 1610612736, 0, 917523, 1610612736, 0, 917524, 1610612736, 0, 917525, 1610612736, 0, 917526, 1610612736, 0, 917527, 1610612736, 0, 917528, 1610612736, 0, 983040, 1610612736, 0, 983041, 1610612736, 0, 983042, 1610612736, 0, 983043, 1610612736, 0, 983044, 1610612736, 0, 983045, 1610612736, 0, 983046, 1610612736, 0, 983047, 1610612736, 0, 983048, 1610612736, 0, 983049, 1610612736, 0, 983050, 1610612736, 0, 983051, 1610612736, 0, 983052, 1610612736, 0, 983053, 1610612736, 0, 983054, 1610612736, 0, 983055, 1610612736, 0, 983056, 1610612736, 0, 983057, 1610612736, 0, 983058, 1610612736, 0, 983059, 1610612736, 0, 983060, 1610612736, 0, 983061, 1610612736, 0, 983062, 1610612736, 0, 983063, 1610612736, 0, 983064, 1610612736, 0, 1048576, 1610612736, 0, 1048577, 1610612736, 0, 1048578, 1610612736, 0, 1048579, 1610612736, 0, 1048580, 1610612736, 0, 1048581, 1610612736, 0, 1048582, 1610612736, 0, 1048583, 1610612736, 0, 1048584, 1610612736, 0, 1048585, 1610612736, 0, 1048586, 1610612736, 0, 1048587, 1610612736, 0, 1048588, 1610612736, 0, 1048589, 1610612736, 0, 1048590, 1610612736, 0, 1048591, 1610612736, 0, 1048592, 1610612736, 0, 1048593, 1610612736, 0, 1048594, 1610612736, 0, 1048595, 1610612736, 0, 1048596, 1610612736, 0, 1048597, 1610612736, 0, 1048598, 1610612736, 0, 1048599, 1610612736, 0, 1048600, 1610612736, 0, 1114112, 1610612736, 0, 1114113, 1610612736, 0, 1114114, 1610612736, 0, 1114115, 1610612736, 0, 1114116, 1610612736, 0, 1114117, 1610612736, 0, 1114118, 1610612736, 0, 1114119, 1610612736, 0, 1114120, 1610612736, 0, 1114121, 1610612736, 0, 1114122, 1610612736, 0, 1114123, 1610612736, 0, 1114124, 1610612736, 0, 1114125, 1610612736, 0, 1114126, 1610612736, 0, 1114127, 1610612736, 0, 1114128, 1610612736, 0, 1114129, 1610612736, 0, 1114130, 1610612736, 0, 1114131, 1610612736, 0, 1114132, 1610612736, 0, 1114133, 1610612736, 0, 1114134, 1610612736, 0, 1114135, 1610612736, 0, 1114136, 1610612736, 0 )

[node name="SecondLayer" parent="2LayerTileMap" index="1"]
tile_data = PoolIntArray( 0, 1610612738, 0, 1, 1610612756, 0, 2, 1610612756, 0, 3, 1610612756, 0, 4, 1610612756, 0, 5, 1610612756, 0, 6, 1610612756, 0, 7, 1610612756, 0, 8, 1610612756, 0, 9, 1610612756, 0, 10, 1610612756, 0, 11, 1610612756, 0, 12, 1610612756, 0, 13, 1610612756, 0, 14, 1610612756, 0, 15, 1610612756, 0, 16, 1610612756, 0, 17, 1610612756, 0, 18, 1610612756, 0, 19, 1610612756, 0, 20, 1610612756, 0, 21, 1610612756, 0, 22, 1610612756, 0, 23, 1610612756, 0, 24, 1610612737, 0, 25, 3, 0, 26, 1610612738, 0, 27, 1610612741, 0, 28, 1610612741, 0, 29, 1610612741, 0, 30, 1610612741, 0, 31, 1610612741, 0, 32, 1610612741, 0, 33, 1610612741, 0, 34, 1610612741, 0, 35, 1610612741, 0, 36, 1610612741, 0, 37, 1610612741, 0, 38, 1610612741, 0, 39, 1610612741, 0, 40, 1610612741, 0, 41, 1610612741, 0, 42, 1610612741, 0, 43, 1610612737, 0, 55, 1610612738, 0, 56, 1610612741, 0, 57, 1610612741, 0, 58, 1610612741, 0, 59, 1610612741, 0, 60, 1610612741, 0, 63, 1610612741, 0, 64, 1610612741, 0, 65, 1610612741, 0, 66, 1610612741, 0, 67, 1610612741, 0, 68, 1610612741, 0, 69, 1610612737, 0, 65536, 1610612763, 0, 65561, 3, 0, 65562, 3, 0, 65579, 1610612739, 0, 65591, 3, 0, 65605, 1610612739, 0, 131072, 1610612763, 0, 131097, 3, 0, 131098, 3, 0, 131115, 1610612739, 0, 131127, 3, 0, 131141, 1610612739, 0, 196608, 1610612763, 0, 196633, 3, 0, 196634, 3, 0, 196651, 1610612739, 0, 196663, 3, 0, 196677, 1610612739, 0, 262144, 1610612763, 0, 262169, 3, 0, 262170, 3, 0, 262187, 1610612739, 0, 262199, 3, 0, 262213, 1610612739, 0, 327680, 1610612763, 0, 327705, 3, 0, 327706, 1, 0, 327707, 20, 0, 327708, 20, 0, 327709, 20, 0, 327710, 20, 0, 327711, 20, 0, 327712, 26, 0, 327715, 25, 0, 327716, 20, 0, 327717, 20, 0, 327718, 20, 0, 327719, 20, 0, 327720, 20, 0, 327721, 20, 0, 327722, 20, 0, 327723, 2, 0, 327735, 3, 0, 327749, 1610612739, 0, 393216, 1610612763, 0, 393241, 3, 0, 393248, 1610612737, 0, 393251, -1610612715, 0, 393252, 18, 0, 393253, 18, 0, 393254, 18, 0, 393255, 18, 0, 393256, 18, 0, 393257, 18, 0, 393258, 18, 0, 393259, 19, 0, 393271, 3, 0, 393285, 1610612739, 0, 458752, 1610612763, 0, 458777, 21, 0, 458778, 20, 0, 458779, 20, 0, 458780, 20, 0, 458781, 20, 0, 458782, 20, 0, 458783, 20, 0, 458784, 2, 0, 458787, -1610612714, 0, 458788, 20, 0, 458789, 20, 0, 458790, 20, 0, 458791, 20, 0, 458792, 20, 0, 458793, 20, 0, 458794, 20, 0, 458795, 20, 0, 458796, 20, 0, 458797, 20, 0, 458798, 20, 0, 458799, 20, 0, 458800, 20, 0, 458801, 20, 0, 458802, 20, 0, 458803, 20, 0, 458804, 20, 0, 458805, 20, 0, 458806, 20, 0, 458807, 3, 0, 458821, 1610612739, 0, 524288, 1610612763, 0, 524313, 1610612759, 0, 524357, 1610612739, 0, 589824, 1610612763, 0, 589893, 1610612739, 0, 655360, 1610612763, 0, 655385, 1610612738, 0, 655386, 1610612756, 0, 655387, 1610612756, 0, 655388, 1610612756, 0, 655389, 1610612756, 0, 655390, 1610612756, 0, 655391, 1610612756, 0, 655392, 1610612756, 0, 655393, 1610612756, 0, 655394, 1610612756, 0, 655395, 1610612756, 0, 655396, 1610612756, 0, 655397, 1610612756, 0, 655398, 1610612756, 0, 655399, 1610612756, 0, 655400, 1610612756, 0, 655401, 1610612756, 0, 655402, 1610612756, 0, 655403, 1610612756, 0, 655404, 1610612756, 0, 655405, 1610612756, 0, 655406, 1610612756, 0, 655407, 1610612756, 0, 655408, 1610612756, 0, 655409, 1610612756, 0, 655410, 1610612756, 0, 655411, 1610612756, 0, 655412, 1610612756, 0, 655413, 1610612756, 0, 655414, 1610612737, 0, 655429, 1610612739, 0, 720896, 1610612763, 0, 720921, 3, 0, 720951, -1610612714, 0, 720952, 20, 0, 720953, 20, 0, 720954, 20, 0, 720955, 20, 0, 720956, 20, 0, 720957, 20, 0, 720958, 20, 0, 720959, 20, 0, 720960, 20, 0, 720961, 20, 0, 720962, 20, 0, 720963, 20, 0, 720964, 20, 0, 720965, 2, 0, 786432, 1610612763, 0, 786457, 3, 0, 786487, 18, 0, 786488, 18, 0, 786489, 18, 0, 786490, 18, 0, 786491, 18, 0, 786492, 18, 0, 786493, 18, 0, 786494, 18, 0, 786495, 18, 0, 786496, 18, 0, 786497, 18, 0, 786498, 18, 0, 786499, 18, 0, 786500, 18, 0, 786501, 19, 0, 851968, 1610612738, 0, 851969, 1610612756, 0, 851970, 1610612756, 0, 851971, 1610612756, 0, 851972, 1610612756, 0, 851973, 1610612756, 0, 851974, 1610612756, 0, 851975, 1610612756, 0, 851976, 1610612756, 0, 851977, 1610612737, 0, 851993, 3, 0, 917504, 1610612763, 0, 917513, 1610612739, 0, 917529, 3, 0, 983040, 1610612763, 0, 983049, 1610612739, 0, 983065, 3, 0, 1048576, 1610612763, 0, 1048601, 3, 0, 1114112, 21, 0, 1114113, 20, 0, 1114114, 20, 0, 1114115, 20, 0, 1114116, 20, 0, 1114117, 20, 0, 1114118, 20, 0, 1114119, 20, 0, 1114120, 20, 0, 1114121, 20, 0, 1114122, 20, 0, 1114123, 20, 0, 1114124, 20, 0, 1114125, 20, 0, 1114126, 20, 0, 1114127, 20, 0, 1114128, 20, 0, 1114129, 20, 0, 1114130, 20, 0, 1114131, 20, 0, 1114132, 20, 0, 1114133, 20, 0, 1114134, 20, 0, 1114135, 20, 0, 1114136, 22, 0, 1114137, 1610612763, 0, 1179648, 17, 0, 1179649, 18, 0, 1179650, 18, 0, 1179651, 18, 0, 1179652, 18, 0, 1179653, 18, 0, 1179654, 18, 0, 1179655, 18, 0, 1179656, 18, 0, 1179657, 18, 0, 1179658, 18, 0, 1179659, 18, 0, 1179660, 18, 0, 1179661, 18, 0, 1179662, 18, 0, 1179663, 18, 0, 1179664, 18, 0, 1179665, 18, 0, 1179666, 18, 0, 1179667, 18, 0, 1179668, 18, 0, 1179669, 18, 0, 1179670, 18, 0, 1179671, 18, 0, 1179672, 19, 0, 1179673, 1610612763, 0 )

[node name="Doors" parent="." index="1"]
visible = true
position = Vector2( 991.035, 3.73798 )
script = ExtResource( 8 )

[node name="Background" parent="." index="3" instance=ExtResource( 2 )]
margin_left = 150.416
margin_top = 57.9562
margin_right = 150.416
margin_bottom = 57.9562

[node name="IntroInstructions" parent="." index="4" instance=ExtResource( 3 )]
margin_left = 2.66004
margin_top = -40.3941
margin_right = 2.66004
margin_bottom = -40.3941
rect_scale = Vector2( 1.16595, 1.18649 )

[node name="Key" parent="." index="5" instance=ExtResource( 4 )]
position = Vector2( 1006, 71.5 )

[node name="Monsters" type="Node2D" parent="." index="6"]

[node name="Monster" parent="Monsters" index="0" instance=ExtResource( 5 )]
position = Vector2( 72.6234, 265.096 )

[node name="Monster2" parent="Monsters" index="1" instance=ExtResource( 5 )]
position = Vector2( 456.378, 56.3532 )

[node name="Monster3" parent="Monsters" index="2" instance=ExtResource( 5 )]
position = Vector2( 523.843, 57.5437 )

[node name="Monster4" parent="Monsters" index="3" instance=ExtResource( 5 )]
position = Vector2( 584.958, 61.1154 )

[node name="Monster5" parent="Monsters" index="4" instance=ExtResource( 5 )]
position = Vector2( 974.268, 132.945 )
[connection signal="body_entered" from="Doors" to="." method="_on_Doors_body_entered"]
[connection signal="key_picked" from="Key" to="." method="_on_Key_key_picked"]

[editable path="2LayerTileMap"]
